assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400&family=Quicksand:wght@300;400;500;600;700&display=swap');

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
body {
  min-height: 100vh;
  position: relative;
  display: grid;
  background: #ffff;
}
nav {
    background: #ccd5ae;
    width: 100%; 
    flex: none;
    height: 100%;
}
.nav-link {
    font-size: 1.8rem;
    font-weight: 400;
}
.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
    color: #fefae0;
}
.navbar-light .navbar-nav .nav-link {
    color: rgb(44, 44, 44);
}
.navbar-toggler-icon {
    display: inline-block;
    width: 1.5em;
    height: 1.5em;
    font-size: 2rem;
}
.navbar-left img {
    max-height: 12.5rem;
    background-repeat: no-repeat;
    background-size: cover;
    display: inline;
}
.navbar-light .navbar-toggler {
    border: none;
}
.navbar-toggler {
    padding: .25rem .75rem;
    font-size: 2em;
    line-height: 1;
    background-color: transparent;
    border: 1px solid transparent;
    border-radius: .25rem;
}
.navbar-toggler i:hover {
    color: #faedcd;
}
h1 {
    font-family: "Fredoka One", sans-serif;
    font-weight: 400;
    font-size: 5rem;
    color: rgb(44, 44, 44);
}
h2 {
    font-family: "Quicksand", sans-serif;
    font-weight: 400;
    font-size: 2.5rem;
    color: rgb(44, 44, 44);
}
p {
    font-family: "Open Sans", sans-serif;
    font-weight: 500;
    font-size: 1rem;
    color: rgb(44, 44, 44);
}
.intro-background {
    background-color: #ccd5ae;
    height: 100vh;
}
.home-content {
    background-color: #faedcd;
    border-top: 8px solid #e9edc9 ;
    border-bottom: 7px solid #d4a373;
    padding: 1rem;
    margin-top: 1rem;
    margin-bottom: 2rem;
}
.choose-level {
    text-align: center;
    padding: 1rem;
    margin: 1rem;
    background-color: #faedcd;
    border-top: 6px solid #e9edc9;
    border-bottom: 6px solid #d4a373;
}
.level-button-copy {
    font-family: "Open Sans", sans-serif;
    font-weight: 700;
    font-size: 1rem;
    text-align: center;
}
.level-heading{
    text-align: center;
    padding: 1.5rem;
    font-size: 2rem;
}
#logo{
    font-family: "Fredoka One", sans-serif;
    font-weight: 400;
    font-size: 3rem;
    padding-right: 1rem;
    color: rgb(44, 44, 44);
}
.intro-header {
    text-align: center;
    padding: 2rem;
}
.enter-button {
    text-align: center;
    padding: 2rem;
    margin: 1rem;
}
.btn-lg {
    font-family: "Quicksand", sans-serif;
    font-weight: 600;
    font-size: 2rem;
    background-color: #faedcd;
    border-top: 5px solid #d4a373;
    border-bottom: 6px solid #e9edc9;
}
.level-button-copy {
   font-family: "Quicksand", sans-serif;
    font-weight: 600;
    font-size: 2rem; 
    margin: 1rem;
}
.jump-in-buttons {
    font-family: "Quicksand", sans-serif;
    font-weight: 600;
    font-size: 1rem;
    background-color: #fefae0;
    border: 5px solid #ccd5ae;
    margin: 2px;
}
.social-media {
    text-align: center;
    text-decoration: none;
    padding: 0.5rem;
}
.social-media a {
    font-size: 3rem;
    color: rgb(44, 44, 44);
}
.social-media a:hover{
    font-size: 3rem;
    color: #fefae0;
}
.socials {
    margin: 1rem;
}
#continue {
    display: none;
}
#myBtn {
    font-family: "Quicksand", sans-serif;
    font-weight: 600;
    font-size: 1rem;
    background-color: #fefae0;
    margin-bottom: 2rem;
    padding: 0.5rem;
}
.memory-game {
    width: 330px;
    height: 330px;
    display: flex;
    flex-wrap: wrap;
    perspective: 1000px;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 2rem;
}
.levelThree {
    width: 330px;
    height: 400px;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 9rem;
}
.memory-card{
   width: calc(25% - 10px);
   height: calc(33.333% - 10px);
    margin: 5px;
    background-size: contain;
    background-repeat: no-repeat;
    background-position:center center;
    justify-content: space-evenly;
    position: relative;
    transform: scale(1);
    transform-style: preserve-3d;
    transition: transform .5s;
}
.levelTwoCard{
    width: calc(20% - 10px);
    height: calc(30% - 10px);
}
.levelThreeCard{
    width: calc(21% - 10px);
    height: calc(28% - 10px); 
}
.memory-card:active{
    transform: scale(.97);
    transition: transform .2s;
}
.memory-card.flip {
    transform: rotateY(180deg);
}
.front-face,
.back-face {
    width: 100%;
    height: 100%;
    padding: 10px;
    position: absolute;
    background: #ccd5ae;
    backface-visibility: hidden;
}
  .levelThreeFront,
  .levelThreeBack {
    padding: 8px;
}
.front-face {
    transform: rotateY(180deg);
}
img {
    width: 150px;
    height: 200px;
}
#gameplay-pic {
    width: 25rem;
    height: 26rem;
}
.footer {
    /*position: absolute;*/
    width: 100%;
    height: auto;
    background-color: #ccd5ae;
}
.social-media-footer {
    text-align: center;
    text-decoration: none;
    /*padding: 0.5rem;*/
    /*margin: 1rem;*/
}
.social-media-footer a {
    font-size: 2rem;
    color: rgb(44, 44, 44);

}
@media screen and (min-width: 750px) {
    #logo{
        font-size: 4rem;
    }
    .memory-game {
        width: 640px;
        height: 640px;
    }
    .front-face,
    .back-face {
        padding: 20px;
    }
    .levelTwoFront,
    .levelTwoBack {
        padding: 8px;
    }
    .levelTwo {
        width: 480px;
        height: 500px;
        margin-left: auto;
        margin-right: auto;
        padding-bottom: 5rem;
    }
    .levelTwoCard {
        width: calc(25% - 10px);
        height: calc(30% - 10px);
    }
    .level-button-copy {
        font-size: 3rem; 
    }
    h2 {
        font-size: 3rem;
    }
    .nav-link {
        font-size: 2rem;
    }
    .social-media-footer a {
        font-size: 3rem;
    }
    .levelThreeCard {
        width: calc(16% - 10px);
        height: calc(26% - 10px);
    }
    .levelThree {
        width: 700px;
        height: 680px;
        margin-left: auto;
        margin-right: auto;
        padding-bottom: 2rem;
    }
    .levelThreeFront,
    .levelThreeBack {
        padding: 8px;
    }
}
@media screen and (min-width: 1200px) {
    #logo{
        font-size: 5rem;
    }
     .levelTwo {
        width: 640px;
        height: 510px;
        margin-left: auto;
        margin-right: auto;
        padding-bottom: 6rem;
    }
    .levelTwoCard {
        width: calc(20% - 10px);
        height: calc(34% - 10px);
    }
    .levelThree {
        width: 850px;
        height: 750px;
        margin-left: auto;
        margin-right: auto;
        padding-bottom: 3rem;
    }
 
}

